added types for yup

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/yup": "^0.29.11",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
